force-app/main/default/objects/Intelligence__c/Intelligence__c.object-meta.xml
<CustomObject>
    <label>מודיעין</label>
    <nameField>
        <label>מידע מודיעיני</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>מודיעין</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>