force-app/main/default/objects/Intelligence__c/fields/incident_report__c.field-meta.xml
<CustomField>
    <fullName>incident_report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>כרטיס אירוע</label>
    <referenceTo>Incident_Report__c</referenceTo>
    <relationshipLabel>מודיעין</relationshipLabel>
    <relationshipName>Intelligence</relationshipName>
    <type>Lookup</type>
</CustomField>