force-app/main/default/objects/Intelligence__c/fields/Investigate_address__c.field-meta.xml
<CustomField>
    <fullName>Investigate_address__c</fullName>
    <label>כתובת</label>
    <type>TextArea</type>
</CustomField>