force-app/main/default/objects/Intelligence__c/fields/Investigate_Email__c.field-meta.xml
<CustomField>
    <fullName>Investigate_Email__c</fullName>
    <label>אימייל מתוחקר</label>
    <type>Email</type>
</CustomField>