force-app/main/default/objects/Intelligence__c/fields/Investigation__c.field-meta.xml
<CustomField>
    <fullName>Investigation__c</fullName>
    <label>סיכום תחקור</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>