force-app/main/default/objects/Intelligence__c/fields/Investigation_Type__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Type__c</fullName>
    <label>סוג תחקור</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>תשאול פרופיל נעדר</fullName>
            </value>
            <value>
                <fullName>תחקור האירוע</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>