force-app/main/default/objects/Intelligence__c/fields/Investigator_Name__c.field-meta.xml
<CustomField>
    <fullName>Investigator_Name__c</fullName>
    <label>שם המתחקר</label>
    <length>255</length>
    <type>Text</type>
</CustomField>