force-app/main/default/objects/Intelligence__c/fields/Name_Of_Investigate__c.field-meta.xml
<CustomField>
    <fullName>Name_Of_Investigate__c</fullName>
    <label>שם המתוחקר</label>
    <length>255</length>
    <type>Text</type>
</CustomField>