force-app/main/default/objects/Intelligence__c/fields/Phone_Investigate__c.field-meta.xml
<CustomField>
    <fullName>Phone_Investigate__c</fullName>
    <label>טלפון מתוחקר</label>
    <type>Phone</type>
</CustomField>